<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="single_player">Single Player</string>
    <string name="double_player">Double Player</string>
    <string name="game_guide">Game Guide</string>
    <string name="contact_us">Contact us</string>
    <string name="game_guide_Str">You can play Doz with your friends.
        That our programming team created in this artificial intelligence game
        has done that you can with it on two levels, easy and hard
        play
        The dose game is run with two blue and red dice
        Such that if three beads of the same color are next to each other
        The game will be in favor of the winning player</string>
    <string name="Zero">0</string>
    <string name="Player_1">Player1</string>
    <string name="Zero_left">0</string>
    <string name="player_2">Player2</string>
    <string name="enter_your_the_name_please">Enter Your The Name Please</string>
    <string name="player_1">Player1</string>
    <string name="Player_2">Player2</string>
    <string name="start_the_game">ُStart The Game</string>
    <string name="You_r_equal">You are equal</string>
    <string name="rest_game">بازی مجدد</string>
    <string name="select_the_level_game">Select The level game</string>
    <string name="esay">Esay</string>
    <string name="hard">Hard</string>
    <string name="You">You</string>
    <string name="Robot">Robot</string>
    <string name="Your_Name">Your Name</string>
</resources>