<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Single_Player"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/single_player"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_Double_Player"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/double_player"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btn_Game_Guide"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/game_guide"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        />
    <Button
        android:id="@+id/btn_Contact_us"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="10dp"/>
</LinearLayout>