<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:visibility="visible"
    android:id="@+id/PlayerName_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/PlayerName_layout2"
        android:padding="10dp">
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select_the_level_game"
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"/>
        <RadioGroup
            android:id="@+id/rdog_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/rdo_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esay"
                android:textStyle="bold"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdo_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textStyle="bold"
                />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_the_game"
            android:textSize="20sp"
            android:textColor="#080808"
            android:layout_below="@id/rdog_level"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:background="@drawable/buttonstyle"
            android:id="@+id/btn_Start_Again"/>
    </RelativeLayout>
</RelativeLayout>